--- a/mysite/ratings/templates/ratings/movie_list.html
+++ b/mysite/ratings/templates/ratings/movie_list.html
@@ -1,7 +1,13 @@
-<ul>
-	{% for movie in movie_list %}
-	<li>
-		<a href="/movieratings/movies/{{ movie.id }}/">{{ movie.title }}</a>
-	</li>
-	{% endfor %}
-</ul>
+{% extends 'ratings/base.html' %}
+
+{% block content %}
+
+	<ul>
+		{% for movie in movie_list %}
+		<li>
+			<a href="/movieratings/movies/{{ movie.id }}/">{{ movie.title }}</a>
+		</li>
+		{% endfor %}
+	</ul>
+
+{% endblock %}
