Add login view and template

--- a/mysite/ratings/templates/ratings/base.html
+++ b/mysite/ratings/templates/ratings/base.html
@@ -4,7 +4,10 @@
 	<title>Movie Ratings</title>
 </head>
 <body>
-	Movie Ratings
+	<h2>Movie Ratings</h2>
+
+	<a href="{% url 'ratings:login' %}">Log In</a>
+
 	<hr>
 
 	{% block content %}
