Add logout view and debug redirects

--- a/mysite/ratings/templates/ratings/base.html
+++ b/mysite/ratings/templates/ratings/base.html
@@ -8,6 +8,8 @@
 
 	<a href="{% url 'ratings:login' %}">Log In</a>
 
+	<a href="{% url 'ratings:logout' %}">Log Out</a>
+
 	<hr>
 
 	{% block content %}
