--- a/mysite/ratings/templates/ratings/base.html
+++ b/mysite/ratings/templates/ratings/base.html
@@ -9,6 +9,7 @@
 	{% if not user.is_authenticated %}
 		<p>Log in or create an account to rate movies!</p>
 		<a href="{% url 'ratings:login' %}">Log In</a>
+		<a href="{% url 'ratings:register' %}">Create an Account</a>
 	{% endif %}
 
 
