--- a/mysite/ratings/templates/ratings/base.html
+++ b/mysite/ratings/templates/ratings/base.html
@@ -18,6 +18,8 @@
 		<a href="{% url 'ratings:logout' %}">Log Out</a>
 	{% endif %}
 
+	<a href="{% url 'ratings:index' %}">Home page</a>
+
 	<hr>
 
 	{% if messages %}
