--- a/mysite/ratings/templates/ratings/login.html
+++ b/mysite/ratings/templates/ratings/login.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Log In to Movie Ratings</title>
+	<title>Movie Ratings</title>
 </head>
 <body>
 
-	<form action="{% url 'ratings:login' %}" method="POST">
+	<h1>Log In to Movie Ratings</h1>
+
+	<form action="{% url 'ratings:login' %}" method="POST" id="login_form">
 	{% csrf_token %}
 		<label>Username:
 			<input type="text" name="username">
