Implement Django generic views and add info to movie detail and user detail pages

--- a/mysite/ratings/templates/ratings/index.html
+++ b/mysite/ratings/templates/ratings/index.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 	
+	<p>
 	Welcome to the Movie Ratings app!
+	</p>
+
+	<a href="{% url 'ratings:movie_list' %}">View all movies</a>
+	<br>
+	<a href="{% url 'ratings:user_list' %}">View all users</a>
+
 
 {% endblock %}
