--- a/mysite/ratings/templates/ratings/user_details.html
+++ b/mysite/ratings/templates/ratings/user_details.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 
-	You're viewing details about user {{ user.id }}
+	<h2>Reviewer Profile</h2>
+	<p>Age: {{ reviewer.age }}</p>
+	<p>Zipcode: {{ reviewer.zipcode }}</p>
+	
 
 {% endblock %}
