--- a/mysite/ratings/templates/ratings/movie_details.html
+++ b/mysite/ratings/templates/ratings/movie_details.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
-	You're viewing details about the movie {{ movie.title }}
+	<h2>{{ movie.title }}</h2>
+	<p>Released: {{ movie.release_date}}</p>
+	<p>IMDb page: {{ movie.imdb_url}}</p>
+
+	<h2>Review this movie</h2>
+
+	<h2>All reviews</h2>
 
 {% endblock %}
