Add list of reviews to movie details page

--- a/mysite/ratings/templates/ratings/movie_details.html
+++ b/mysite/ratings/templates/ratings/movie_details.html
@@ -10,4 +10,12 @@
 
 	<h2>All reviews</h2>
 
+		<ul>
+			{% for rating in ratings %}
+				<li>Rating of {{ rating.score }} by User {{ rating.reviewer_id.id }}</li>
+			{% endfor %}		
+
+		</ul>
+
+
 {% endblock %}
