--- a/mysite/ratings/templates/ratings/user_list.html
+++ b/mysite/ratings/templates/ratings/user_list.html
@@ -2,12 +2,22 @@
 
 {% block content %}
 
+{% if custom_reviewer_list %}
+
 	<ul>
-		{% for reviewer in reviewer_list %}
-		<li>
-			<a href="{% url 'ratings:user_details' reviewer.id %}">User {{ reviewer.id }}</a>
-		</li>
+		{% for reviewer in custom_reviewer_list %}
+			{% if reviewer.username %}
+				<li>
+					<a href="{% url 'ratings:user_details' reviewer.id %}">User {{ reviewer.id }}</a> Username: {{ reviewer.username }}
+				</li>
+			{% else %}
+				<li>
+					<a href="{% url 'ratings:user_details' reviewer.id %}">User {{ reviewer.id }}</a> Age: {{ reviewer.age }}, Zipcode: {{ reviewer.zipcode }}
+				</li>
+			{% endif %}
 		{% endfor %}
 	</ul>
+
+{% endif %}
 
 {% endblock %}
