--- a/mysite/ratings/templates/ratings/index.html
+++ b/mysite/ratings/templates/ratings/index.html
@@ -6,9 +6,9 @@
 	Welcome to the Movie Ratings app!
 	</p>
 
-	<a href="{% url 'ratings:movie_list' %}">View all movies</a>
-	<br>
-	<a href="{% url 'ratings:user_list' %}">View all users</a>
+	<div><a href="{% url 'ratings:movie_list' %}">View all movies</a><div/>
+	
+	<div><a href="{% url 'ratings:user_list' %}">View all users</a><div/>
 
 
 {% endblock %}
