--- a/mysite/ratings/templates/ratings/login.html
+++ b/mysite/ratings/templates/ratings/login.html
@@ -11,10 +11,10 @@
 	{% csrf_token %}
 		<label>Username:
 			<input type="text" name="username">
-		</label>
+		</label><br>
 		<label>Password:
 			<input type="password" name="password">
-		</label>
+		</label><br>
 		<input type="submit" value="Let's rate some movies!">
 	</form>
 
